<resources>
    <string name="app_name">Hello Android</string>
    <string name="title">Udacity</string>
    <string name="address">2465 Latham St, Mountain View, CA 94043</string>
    <string name="phone">650-555-5555</string>
    <string name="web">www.udacity.com</string>
    <string name="never">never</string>
    <string name="stop">stop</string>
    <string name="learning">learning</string>
</resources>
